# membervars

./: .gitignore  LICENSE  README.md  membervars.c  meson.build
completions/: membervars
debian/: changelog  control  copyright
examples/: m2u_expected.cpp  m2u_input.cpp  u2m_expected.cpp  u2m_input.cpp
man/: membervars.1
tests/: m2u_ctor.in.cpp  m2u_ctor.out.cpp  m2u_default.in.cpp  m2u_default.out.cpp  m2u_impl.in.cpp  m2u_impl.out.cpp  m2u_params.in.cpp  m_to_u_params.out.cpp  m_to_u_several.in.cpp  m_to_u_several.out.cpp  test_membervars.sh  u2m_Shell.in.cpp  u2m_Shell.out.cpp  u_to_m_nested.in.cpp  u_to_m_nested.out.cpp
